--- a/website/templates/services.html
+++ b/website/templates/services.html
@@ -1,3 +1,21 @@
 <!-- your html code here -->
-<p>Hello, I'm the services.html</p>
-<p>Hello, I'm the services section and I was loaded using ajax from templates/services.html</p>
+
+<div class="container">
+    <div class="row align-items-center">
+        <!-- Image -->
+        <div class="col-md-4 text-center">
+            <img src="/website/assets/img/2.jpg" class="img-fluid rounded-circle">
+        </div>
+        <!-- Text -->
+        <div class="col-md-8">
+            <h3>
+                <strong>The Second Heading</strong> <strong class="text-secondary">Is Pretty Cool Too.</strong>
+            </h3>
+            <p>
+                Donec ullamcorper nulla non metus auctor fringilla. Vestibulum id ligula porta felis euismod semper.
+                Praesent commodo cursus magna, vel scelerisque nisl consectetur.
+                Fusce dapibusm tellus ac cursus commodo.
+            </p>
+        </div>
+    </div>
+</div>
