--- a/website/assets/css/style.css
+++ b/website/assets/css/style.css
@@ -1,3 +1,11 @@
 body{
-    background: #BDBDBD;
+    background: white;
+}
+
+* {
+    border: 1px solid black;
+}
+
+.card-name {
+    color: blue
 }
