--- a/website/templates/portfolio.html
+++ b/website/templates/portfolio.html
@@ -1,2 +1,45 @@
 <!-- your html code here -->
-<p>Hello, I'm the portfolio.html</p>
+
+<div class="container-md">
+    <h2 class="Portfolio">Portfolio</h2>
+    <div class="row">
+        <p>Donec ullamcorper nulla non metus auctor fringilla. Vestibulum id ligula porta felis euismod semper. Praesent
+            commodo cursus magna, vel scelerisque nisl consectetur. Fusce dapibus, tellus ac cursus commodo.</p>
+    </div>
+
+    <div class="row align-items-center">
+        <div class="col-md-4">
+            <div class="card w-100" style="width: 18rem;">
+                <img src="/website/assets/img/big-project-image.png" class="card-img-top pb-3" alt="...">
+                <div class="card-body p-0">
+                    <h3 class="card-name">Proyect Name</h3>
+                    <p class="card-text">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nam viverra euismod
+                        odio, gravida pellentesque urna varius vitae.</p>
+                </div>
+            </div>
+        </div>
+
+        <div class="col-md-4">
+            <div class="card w-100" style="width: 18rem;">
+                <img src="/website/assets/img/big-project-image.png" class="card-img-top pb-3" alt="...">
+                <div class="card-body p-0">
+                    <h3 class="card-name">Proyect Name</h3>
+                    <p class="card-text">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nam viverra euismod
+                        odio, gravida pellentesque urna varius vitae.</p>
+                </div>
+            </div>
+        </div>
+
+        <div class="col-md-4">
+            <div class="card w-100" style="width: 18rem;">
+                <img src="/website/assets/img/big-project-image.png" class="card-img-top pb-3" alt="...">
+                <div class="card-body p-0">
+                    <h3 class="card-name">Proyect Name</h3>
+                    <p class="card-text">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nam viverra euismod
+                        odio, gravida pellentesque urna varius vitae.</p>
+                </div>
+            </div>
+        </div>
+
+    </div>
+</div>
