--- a/website/templates/portfolio.html
+++ b/website/templates/portfolio.html
@@ -9,7 +9,7 @@
 
     <div class="row align-items-center">
         <div class="col-md-4">
-            <div class="card w-100" style="width: 18rem;">
+            <div class=" w-100 mb-5" style="width: 18rem;">
                 <img src="/website/assets/img/big-project-image.png" class="card-img-top pb-3" alt="...">
                 <div class="card-body p-0">
                     <h3 class="card-name">Proyect Name</h3>
@@ -20,7 +20,7 @@
         </div>
 
         <div class="col-md-4">
-            <div class="card w-100" style="width: 18rem;">
+            <div class="w-100 mb-5" style="width: 18rem;">
                 <img src="/website/assets/img/big-project-image.png" class="card-img-top pb-3" alt="...">
                 <div class="card-body p-0">
                     <h3 class="card-name">Proyect Name</h3>
@@ -31,7 +31,7 @@
         </div>
 
         <div class="col-md-4">
-            <div class="card w-100" style="width: 18rem;">
+            <div class="w-100 mb-5" style="width: 18rem;">
                 <img src="/website/assets/img/big-project-image.png" class="card-img-top pb-3" alt="...">
                 <div class="card-body p-0">
                     <h3 class="card-name">Proyect Name</h3>
