--- a/website/templates/navbar.html
+++ b/website/templates/navbar.html
@@ -4,13 +4,15 @@
     <div class="d-flex col-md-12 mb-6 ">
         <nav class="navbar navbar-expand-lg ">
             <div class="container-fluid">
-                <a class="navbar-brand text-secondary" href="#">Start Bootstrap</a>
-                <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav"
+                <a class="navbar-brand text-secondary" href="#"></a>
+                <button class="navbar-toggler bg-light" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav"
                     aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
                     <span class="navbar-toggler-icon"></span>
                 </button>
                 <div class="collapse navbar-collapse" id="navbarNav">
                     <ul class="navbar-nav">
+                        <li class="nav-item">
+                            <a class="nav-link text-secondary" href="#">Start Bootstrap</a>
                         <li class="nav-item">
                             <a class="nav-link text-secondary" href="#">About</a>
                         </li>
@@ -24,6 +26,7 @@
                             <a class="nav-link text-secondary" href="#">Contacts</a>
                         </li>
                     </ul>
+
                 </div>
             </div>
         </nav>
