--- a/website/templates/contact.html
+++ b/website/templates/contact.html
@@ -1,2 +1,28 @@
 <!-- your html code here -->
-<p>Hello, I'm contact.html</p>
+
+<div class="container-md my-5">
+    <h2 class="Portfolio">Contact</h2>
+    <div class="row">
+        <p>Donec ullamcorper nulla non metus auctor fringilla. Vestibulum id ligula porta felis euismod semper. Praesent
+            commodo cursus magna, vel scelerisque nisl consectetur. Fusce dapibus, tellus ac cursus commodo.</p>
+    </div>
+    <div class="row">
+        <div class="col-md mx-5">
+            <form class="p-5 border border-primary bg-light">
+                <div class="border border-danger">
+                <div class="mb-3">
+                    <label for="exampleFormControlInput1" class="form-label"><strong>Your Email</strong></label>
+                    <input type="email" class="form-control" id="exampleFormControlInput1" placeholder="Your Email">
+                </div>
+                <div class="mb-3">
+                    <label for="exampleFormControlTextarea1" class="form-label"><strong>Your Message</strong></label>
+                    <textarea class="form-control" id="exampleFormControlTextarea1" rows="3"
+                        placeholder="Please enter your message here..."></textarea>
+                </div>
+                <div class="d-flex justify-content-end">
+                    <button class="btn btn-primary" type="submit">Submit</button>
+                </div>
+                </div>
+            </form>
+        </div>
+    </div>
