--- a/website/templates/first_heading.html
+++ b/website/templates/first_heading.html
@@ -1,19 +1,15 @@
 <div class="container">
     <div class="row align-items-center">
-        <div class="d-flex">
-            <div class="col-md-8">
-                <div class="flex-wrap">
-                    <h5><strong>This First Heading</strong> <strong class="text-secondary">Will Catch Your Eye</strong>
-                    </h5>
-                </div>
-                <p>Donec ullamcorper nulla non metus auctor fringilla. Vestibulum id
-                    ligula porta felis<br>euismod semper. Praesent commodo cursus magna, vel scelerisque nisl<br>
-                    consectetur. Fusce dapibus, tellus ac cursus commodo.
-                </p>
-            </div>
-            <div class="col-md-4">
-                <img class="img-fluid rounded-circle" src="/website/assets/img/1.jpg">
-            </div>
+        <div class="d-flex align-items-end flex-column  col-md-8">
+                <h3><strong>This First Heading</strong> <strong class="text-secondary">Will Catch Your Eye</strong>
+                </h3>
+            <p class="text-start">Donec ullamcorper nulla non metus auctor fringilla. Vestibulum id
+                ligula porta felis<br>euismod semper. Praesent commodo cursus magna, vel scelerisque nisl<br>
+                consectetur. Fusce dapibus, tellus ac cursus commodo.
+            </p>
+        </div>
+        <div class="col-md-4 text-center">
+            <img class="img-fluid rounded-circle" src="/website/assets/img/1.jpg">
         </div>
     </div>
 </div>
