--- a/website/assets/css/style.css
+++ b/website/assets/css/style.css
@@ -6,3 +6,16 @@ body{
 .card-name {
     color: royalblue
 }
+
+form {
+    font-size: 14px;
+}
+
+* {
+    font-family:'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
+
+}
+
+p {
+    font-size: 20px;
+}
