--- a/website/templates/contact.html
+++ b/website/templates/contact.html
@@ -1,28 +1,33 @@
 <!-- your html code here -->
 
 <div class="container-md my-5">
-    <h2 class="Portfolio">Contact</h2>
+    <h1 class="contact"><strong>Contact</strong></h1>
     <div class="row">
         <p>Donec ullamcorper nulla non metus auctor fringilla. Vestibulum id ligula porta felis euismod semper. Praesent
             commodo cursus magna, vel scelerisque nisl consectetur. Fusce dapibus, tellus ac cursus commodo.</p>
     </div>
-    <div class="row">
-        <div class="col-md mx-5">
-            <form class="p-5 border border-primary bg-light">
-                <div class="border border-danger">
-                <div class="mb-3">
-                    <label for="exampleFormControlInput1" class="form-label"><strong>Your Email</strong></label>
-                    <input type="email" class="form-control" id="exampleFormControlInput1" placeholder="Your Email">
+
+
+    <div class="container-md d-flex justify-content-center">
+        <form class="border p-1 mx-5 bg-light w-75">
+            <div class="row mb-3 px-4">
+                <label for="email" class="col-sm-2 col-form-label fw-bold d-flex justify-content-end">Your E-mail</label>
+                <div class="col-sm-10">
+                    <input type="email" class="form-control" id="email" placeholder="Your email">
                 </div>
-                <div class="mb-3">
-                    <label for="exampleFormControlTextarea1" class="form-label"><strong>Your Message</strong></label>
-                    <textarea class="form-control" id="exampleFormControlTextarea1" rows="3"
+            </div>
+            <div class="row mb-3 px-4">
+                <label for="message" class="col-sm-2 col-form-label fw-bold d-flex justify-content-end">Your message</label>
+                <div class="col-sm-10">
+                    <textarea class="form-control" id="message" rows="4"
                         placeholder="Please enter your message here..."></textarea>
                 </div>
-                <div class="d-flex justify-content-end">
-                    <button class="btn btn-primary" type="submit">Submit</button>
+            </div>
+            <div class="row p-2">
+                <div class="offset-sm-2 col-sm-10 d-flex justify-content-end">
+                    <button type="submit" class="btn btn-primary">Submit</button>
                 </div>
-                </div>
-            </form>
-        </div>
+            </div>
+        </form>
     </div>
+</div>
