--- a/website/templates/portfolio.html
+++ b/website/templates/portfolio.html
@@ -1,7 +1,7 @@
 <!-- your html code here -->
 
-<div class="container-md">
-    <h2 class="Portfolio">Portfolio</h2>
+<div class="container-md my-5">
+    <h1 class="Portfolio"><strong>Portfolio</strong></h1>
     <div class="row">
         <p>Donec ullamcorper nulla non metus auctor fringilla. Vestibulum id ligula porta felis euismod semper. Praesent
             commodo cursus magna, vel scelerisque nisl consectetur. Fusce dapibus, tellus ac cursus commodo.</p>
