--- a/website/templates/tagline.html
+++ b/website/templates/tagline.html
@@ -1,5 +1,5 @@
-<div class="tagline container-fluid">
-    <div class="w-100 d-flex justify-content-center align-items-center flex-column">
+<div class="tagline">
+    <div class="d-flex justify-content-center align-items-center flex-column">
         <h1 class="container-fluid">One Page Wonder</h1>
         <h3 class="container-fluid">Will Knock Your Socks Off</h3>
     </div>
