cambios en contact

--- a/website/templates/contact.html
+++ b/website/templates/contact.html
@@ -11,13 +11,13 @@
     <div class="container-md d-flex justify-content-center">
         <form class="border p-1 mx-5 bg-light w-75">
             <div class="row mb-3 px-4">
-                <label for="email" class="col-sm-2 col-form-label fw-bold d-flex justify-content-end">Your E-mail</label>
-                <div class="col-sm-10">
+                <label for="email" class="col-sm-2 col-form-label fw-bold d-flex justify-content-center">Your E-mail</label>
+                <div class="col-sm-9">
                     <input type="email" class="form-control" id="email" placeholder="Your email">
                 </div>
             </div>
             <div class="row mb-3 px-4">
-                <label for="message" class="col-sm-2 col-form-label fw-bold d-flex justify-content-end">Your message</label>
+                <label for="message" class="col-sm-2 col-form-label fw-bold d-flex justify-content-center">Your message</label>
                 <div class="col-sm-10">
                     <textarea class="form-control" id="message" rows="4"
                         placeholder="Please enter your message here..."></textarea>
